# MCPtastic

./: .gitignore  MCPtastic.py  README.md  main.py  pyproject.toml
MCPtastic/: ble.py  demo.py  device.py  interface_manager.py  location.py  main.py  mesh.py  node.py  srl.py  tcp.py  utils.py  version.py
tests/: test_ble.py  test_device.py  test_interface_manager.py  test_mesh.py  test_node.py  test_srl.py  test_tcp.py  test_utils.py
