[project]
name = "mcptastic"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump2version>=1.0.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "meshtastic>=2.6.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
